<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_background">
    <!-- AppBarLayout con CollapsingToolbarLayout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:background="@android:color/transparent">
        
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            >
            <ImageView
                android:id="@+id/uploadImage"
                android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
                android:layout_gravity="center"
            android:src="@drawable/uploading"
            app:layout_collapseMode="parallax"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tools_filtro"
                app:title=" "
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_ppal"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textColor="@color/pink"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/lavender_border"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                <EditText
                    android:id="@+id/itTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/lavender_border"
                    android:hint="@string/titulo_post"
                    android:padding="16dp"
                    android:textSize="13sp"
                    android:textColor="@color/pink"/>
                <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/lavender_border"
                    android:hint="@string/descripcion"
                    android:padding="16dp"
                    android:textSize="13sp"
                    android:textColor="@color/pink"/>
                <Spinner
                    android:id="@+id/spinnerCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/lavender_border"/>
                <EditText
                    android:id="@+id/etDuracion"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/lavender_border"
                    android:layout_marginTop="10dp"
                    android:padding="16dp"
                    android:hint="@string/duracion"
                    android:gravity="start|center_vertical"
                    android:inputType="number"
                    android:textColor="@color/pink"
                    android:textSize="13sp"/>
                    <EditText
                        android:id="@+id/etPresupuesto"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/presupuesto"
                        android:inputType="numberDecimal"
                        android:background="@drawable/lavender_border"
                        android:layout_marginTop="10dp"
                        android:padding="16dp"
                        android:gravity="start|center_vertical"
                        android:textColor="@color/pink"
                        android:textSize="13sp"/>
                <Button
                    android:id="@+id/btnPublicar"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/publicar"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>



</androidx.coordinatorlayout.widget.CoordinatorLayout>